<resources>
    <string name="app_name">Safe</string>
    <string name="action_settings">Settings</string>
    <string name="button_1_text">Click Button</string>
    <string name="users_quest">Are you ok??</string>
    <string name="yes_button_text">Yes</string>
    <string name="users_answer_1">So Pick Me</string>
    <string name="no_button_text">No</string>
    <string name="users_answer_2">No Pick Me</string>
    <string name="user_name_EdtText">Your Name</string>

</resources>
