<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    android:gravity="center|top"
    tools:context="com.example.cjsantos86.safe.MainActivity"
    tools:showIn="@layout/activity_main"

    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/users_quest"
        android:textSize="30sp"/>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes_button_text"
            android:hint="@string/users_answer_1"
            android:onClick="onYesButtonClick"
            android:id="@+id/answer_yes_Button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_button_text"
        android:hint="@string/users_answer_2"
        android:onClick="onNoButtonClick"
        android:id="@+id/answer_no_Button"/>

    </LinearLayout>

     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">

        <EditText
            android:layout_width="200sp"
            android:layout_height="50sp"
            android:inputType="textPersonName"
            android:hint="@string/user_name_EdtText"
            android:id="@+id/users_name_Edit_text"/>

     </LinearLayout>



</LinearLayout>
